<resources>
    <string name="app_name">Reciplan</string>

    <string name="title_recipe">Recipe</string>
    <string name="title_plan">Plan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_image_desc">Recipe image description</string>
    <string name="recipe_title_placeholder">recipe_title</string>
    <string name="collection_alternate_text">No Recipe has been added to your collection\nGo to Explore to add Recipes by clicking on the  \u2713  button</string>
    <string name="favorite_alternate_text">No Recipe has been added to your Favorites\nGo to Collection to add Recipes by clicking on the  \u2764  button</string>
    <string name="str_view_directions">directions</string>
    <string name="str_minutes">mins</string>
    <string name="str_ingredients">Ingredients</string>
    <string name="str_20">20</string>
    <string name="str_8">8</string>
    <string name="str_recipeName_placeholder">Face De Wall</string>
    <string name="str_directions">DIRECTIONS</string>
    <string name="str_clear_collection">Clear all recipes from collection</string>
    <string name="str_clear_plans">Clear all Plans</string>
    <string name="str_clear_favorite">Clear all favorite recipes</string>
    <string name="txt_plan_edit">EDIT</string>
    <string name="no_directions">no direction</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!--MealTypes-->
    <string name="str_breakfast">Breakfast</string>
    <string name="str_lunch">Lunch</string>
    <string name="str_dinner">Dinner</string>


    <!--Preference text values-->
    <string name="pref_build_version">Version 1.0.2</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="other_header">Other</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="str_setRecipe_info">Only Recipes that are part of your collection shows here</string>
    <string name="str_plan_default_meal">Missing Meal Plan(s)</string>
    <string name="menu_item_settings">settings</string>
    <string name="menu_item_read_info">read info</string>
    <string name="missing_recipe_text">Recipe not set</string>
    <string name="swipeRemove">remove</string>
    <string name="close">close</string>
    <string name="str_developer_info">Kojo Kakraba Eghan is a software developer and a Technology enthusiast with a passion in 3D modelling</string>
    <string name="link_developer_profile"><a href="https://kojokeghan.wordpress.com/">Profile</a></string>
    <string name="str_snacks">Snacks</string>
    <string name="recipe_img_desc">Image of recipe</string>
    <string name="recipe_name_placeholder">Agushi with palava sauce</string>


    <!--Days of the week-->
    <string name="str_monday">Monday</string>
    <string name="str_tuesday">Tuesday</string>
    <string name="str_wednesday">Wednesday</string>
    <string name="str_thursday">Thursday</string>
    <string name="str_friday">Friday</string>
    <string name="str_saturday">Saturday</string>
    <string name="str_sunday">Sunday</string>


    <string name="recipe_ignore_desc">ignore recipe</string>
    <string name="recipe_accept_desc">accept recipe</string>
    <string name="placeholder_recipe_name">Fois de Grasee</string>

    <string name="str_ingredient_placeholder">8</string>
    <string name="str_recipe">Recipe</string>

    <string name="default_recipe_txt">
        1. place something on fire\n
        2. preheat oven to 98 degrees\n
        3. place something on fire\n
        4. Cook till its is brown and soft something on fire\n
        5. Enjoy your meal with family and friends\n
        6. Enjoy your meal with family and friends\n
        7. Enjoy your meal with family and friends\n
        8. This is a place holder for cooing</string>
    <string name="profile_str">profile</string>


    <string name="breakfast_set_status">Breakfast Not Set</string>
    <string name="lunch_set_status">Lunch Not Set</string>
    <string name="dinner_set_status">Dinner Not Set</string>
    <string name="snack_set_status">Snack not set</string>
    <string name="not_set_breakfast">breakfast not set</string>
    <string name="not_set_lunch">lunch not set</string>
    <string name="not_set_dinner">dinner not set</string>
    <string name="not_set_snack">snack not set</string>
    <string name="cancel">Cancel</string>
    <string name="str_welcome_message">Welcome to Reciplan, You can explore various authentic Ghanaian recipes from this page.
        If you like a recipe you can add it to your collection by press the \u2713 button.\nBon appétit! </string>
    <string name="str_close_welcome_dialog">do show again</string>
    <string name="str_need_internet">Turn on internet access to load recipe images</string>
    <string name="str_swipe_delete">Swipe to delete Recipe</string>
    <string name="ok">OK</string>

    <string name="copyright_disclaimer">All images and recipes used in this app are the property of their respective owners. We do not claim ownership of any of the images or recipes. If you are the owner of an image or recipe and would like it to be removed from our app, please contact us and we will promptly remove it."
    </string>
    <string name="developer">Developer</string>
    <string name="recipe_unavailable">\link not currently available\"</string>
    <string name="video">video</string>
    <string name="play_youtube_video">play youtube video</string>
    <string name="clear_all_plans">Clear all plans</string>
    <string name="add">Add</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="choose_image">Choose Image</string>
    <string name="save">Save</string>
    <string name="recipe_directions">Recipe Directions</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="add_your_recipe">Add Recipe</string>
    <string name="back">back</string>
    <string name="set_meal_plan">Set Meal Plan</string>
    <string name="favorite">favorite</string>
    <string name="collection">collection</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredients_list">Ingredients list</string>
    <string name="next">Next &gt;&gt;</string>
    <string name="str_snack">Snack</string>
    <string name="agushi_with_palava_sauce">Agushi with palava sauce</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="manage_recipes">Manage Recipe</string>
    <string name="directions">directions</string>
    <string name="editRecipe">Edit your recipe</string>
    <string name="quit_confirmation">Are you sure you want to quit?</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="duration">duration</string>
    <string name="empty">Empty</string>
    <string name="recipe_updated">Recipe Updated</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="tap_to_read">Tap to read</string>
    <string name="copyright_disclaimer_str">Copyright Disclaimer</string>
    <string name="build_version">Build Version</string>
    <string name="enable_haptics">Enable haptics</string>
    <string name="sound_haptics"><![CDATA[Sound & Haptics]]></string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="developer_info">Developer Info</string>
    <string name="tap_for_info">Tap for info</string>
    <string name="disable_haptics">Disable Haptics</string>
    <string name="disable_darkmode">Disable DarkMode</string>
    <string name="import_export_recipes">Import/Export Recipes</string>
    <string name="import_recipes_from_file">Import recipes from file</string>
    <string name="import_recipes">Import Recipes</string>
    <string name="export_your_recipes_to_file">Export to download folder</string>
    <string name="export_recipes">Export Recipes</string>
    <string name="_13">13</string>
    <string name="k33gh4n">K33GH4N</string>
    <string name="str_theme">Theme</string>
    <string name="file_name">file name</string>
    <string name="version_info">%1$s (%2$d)</string>
    <string name="dont_show_again">don\'t show again</string>
    <string name="settings">Settings</string>
    <string name="all_plans_cleared">All Plans cleared</string>
    <string name="operation_cancelled">operation cancelled</string>
    <string name="recipe_not_set">Recipe not set</string>


</resources>
