<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_20sdp">

        <TextView
            android:id="@+id/ThemeCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pref_category_start_margin"
            android:text="@string/str_theme"
            android:textColor="@color/colorSecondaryAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/themePref"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pref_category_top_margin"
            android:text="@string/disable_darkmode"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/pref_textSize"
            app:layout_constraintEnd_toStartOf="@+id/prefThemeSwitch"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/ThemeCategory"
            app:layout_constraintTop_toBottomOf="@id/ThemeCategory" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/prefThemeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="@+id/themePref"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/themePref"
            app:layout_constraintTop_toTopOf="@+id/themePref" />

        <View
            android:id="@+id/themeDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/pref_divider_margin"
            android:background="@color/lightGrey"
            app:layout_constraintTop_toBottomOf="@+id/prefThemeSwitch" />

        <!--SOUND AND HAPTICS-->

        <TextView
            android:id="@+id/SoundCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pref_category_start_margin"
            android:layout_marginTop="@dimen/pref_category_top_margin"
            android:text="@string/sound_haptics"
            android:textColor="@color/colorSecondaryAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/themeDivider" />

        <TextView
            android:id="@+id/hapticsPref"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pref_category_top_margin"
            android:text="@string/enable_haptics"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/pref_textSize"
            app:layout_constraintEnd_toStartOf="@+id/prefHapticsSwitch"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/SoundCategory"
            app:layout_constraintTop_toBottomOf="@id/SoundCategory" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/prefHapticsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="@+id/hapticsPref"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/hapticsPref"
            app:layout_constraintTop_toTopOf="@+id/hapticsPref" />

        <View
            android:id="@+id/SoundDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/pref_divider_margin"
            android:background="@color/lightGrey"
            app:layout_constraintTop_toBottomOf="@+id/prefHapticsSwitch" />

        <!--IMPORT AND EXPORT-->

        <TextView
            android:id="@+id/ImportExportCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pref_category_start_margin"
            android:layout_marginTop="20dp"
            android:text="@string/import_export_recipes"
            android:textColor="@color/colorSecondaryAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SoundDivider" />

        <TextView
            android:id="@+id/ExportPref"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pref_category_top_margin"
            android:text="@string/export_recipes"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/pref_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/ImportExportCategory"
            app:layout_constraintTop_toBottomOf="@id/ImportExportCategory" />

        <TextView
            android:id="@+id/ExportPrefSub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/export_your_recipes_to_file"
            android:textSize="@dimen/pref_sub_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/ImportExportCategory"
            app:layout_constraintTop_toBottomOf="@id/ExportPref" />

        <!--Import Pref-->

        <TextView
            android:id="@+id/ImportPref"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pref_category_top_margin"
            android:text="@string/import_recipes"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/pref_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/ImportExportCategory"
            app:layout_constraintTop_toBottomOf="@id/ExportPrefSub" />

        <TextView
            android:id="@+id/ImportPrefSub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/import_recipes_from_file"
            android:textSize="@dimen/pref_sub_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/ImportExportCategory"
            app:layout_constraintTop_toBottomOf="@id/ImportPref" />


        <View
            android:id="@+id/ImportExportDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/pref_divider_margin"
            android:background="@color/lightGrey"
            app:layout_constraintTop_toBottomOf="@+id/ImportPrefSub" />

        <!--Other-->
        <TextView
            android:id="@+id/OtherCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pref_category_start_margin"
            android:layout_marginTop="@dimen/pref_category_top_margin"
            android:text="@string/other_header"
            android:textColor="@color/colorSecondaryAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ImportExportDivider" />

        <TextView
            android:id="@+id/BuildInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pref_category_top_margin"
            android:text="@string/build_version"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/pref_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/OtherCategory"
            app:layout_constraintTop_toBottomOf="@id/OtherCategory" />

        <TextView
            android:id="@+id/BuildInfoSub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_13"
            android:textSize="@dimen/pref_sub_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/OtherCategory"
            app:layout_constraintTop_toBottomOf="@id/BuildInfo" />

        <TextView
            android:id="@+id/copyRightDisclaimer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pref_category_top_margin"
            android:text="@string/copyright_disclaimer_str"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/pref_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/OtherCategory"
            app:layout_constraintTop_toBottomOf="@id/BuildInfoSub" />

        <TextView
            android:id="@+id/copyRightDisclaimerSub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_read"
            android:textSize="@dimen/pref_sub_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/OtherCategory"
            app:layout_constraintTop_toBottomOf="@id/copyRightDisclaimer" />


        <View
            android:id="@+id/OtherDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/pref_divider_margin"
            android:background="@color/lightGrey"
            app:layout_constraintTop_toBottomOf="@+id/copyRightDisclaimerSub" />

        <!--Developer-->
        <TextView
            android:id="@+id/DeveloperCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pref_category_start_margin"
            android:layout_marginTop="@dimen/pref_category_top_margin"
            android:text="@string/developer"
            android:textColor="@color/colorSecondaryAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/OtherDivider" />

        <TextView

            android:id="@+id/DeveloperInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pref_category_top_margin"
            android:text="@string/developer_info"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/pref_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/DeveloperCategory"
            app:layout_constraintTop_toBottomOf="@id/DeveloperCategory" />

        <TextView
            android:id="@+id/DeveloperInfoSub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tap_for_info"
            android:textSize="@dimen/pref_sub_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/DeveloperCategory"
            app:layout_constraintTop_toBottomOf="@id/DeveloperInfo" />

        <TextView
            android:id="@+id/contactDeveloper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pref_category_top_margin"
            android:text="@string/contact_developer"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/pref_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/DeveloperCategory"
            app:layout_constraintTop_toBottomOf="@id/DeveloperInfoSub" />

        <TextView
            android:id="@+id/contactDeveloperSub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/k33gh4n"
            android:textSize="@dimen/pref_sub_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/DeveloperCategory"
            app:layout_constraintTop_toBottomOf="@+id/contactDeveloper" />


        <View
            android:id="@+id/DeveloperDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/pref_divider_margin"
            android:background="@color/lightGrey"
            app:layout_constraintTop_toBottomOf="@+id/contactDeveloperSub" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>